@@ -23,13 +23,13 @@
  */
 package org.tap4j.parser.issueGitHub37;
 
-import static org.junit.Assert.assertNotNull;
-
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.tap4j.consumer.TapConsumer;
 import org.tap4j.consumer.TapConsumerImpl;
 import org.tap4j.model.TestSet;
 import org.tap4j.parser.Tap13Parser;
+
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 /**
  * Makes sure that a SKIP directive is not taken as a comment.
@@ -42,14 +42,15 @@ public class TestSkipDirective {
     @Test
     public void testSkipDirectivePresent() {
         TapConsumer consumer = new TapConsumerImpl(new Tap13Parser("ISO-8859-1", false,  false));
-        TestSet ts = consumer.load("#cat /var/lib/jenkins/jobs/gh-mellanox-v1.8-PR/builds/137/tap-master-files/cov_stat.tap\n" +
-                "not ok 1 #SKIP\n" +
-                "ok 2 - coverity found no issues for oshmem\n" +
-                "ok 3 - coverity found no issues for yalla\n" +
-                "ok 4 - coverity found no issues for mxm\n" +
-                "ok 5 - coverity found no issues for fca\n" +
-                "ok 6 - coverity found no issues for hcoll");
-        assertNotNull(ts.getTestResults().get(0).getDirective());
+        TestSet ts = consumer.load("""
+            #cat /var/lib/jenkins/jobs/gh-mellanox-v1.8-PR/builds/137/tap-master-files/cov_stat.tap
+            not ok 1 #SKIP
+            ok 2 - coverity found no issues for oshmem
+            ok 3 - coverity found no issues for yalla
+            ok 4 - coverity found no issues for mxm
+            ok 5 - coverity found no issues for fca
+            ok 6 - coverity found no issues for hcoll""");
+        assertNotNull(ts.getTestResults().getFirst().getDirective());
     }
 
 }
